k8s/service.yml
apiVersion: v1
kind: Service
metadata:
  name: beacon-dashboard
  namespace: ${NAMESPACE}
  labels:
    app: beacon-dashboard
spec:
  type: NodePort
  selector:
    app: beacon-dashboard
  ports:
    - port: 80
      targetPort: 8080
      protocol: TCP
      name: http
  sessionAffinity: None
